# searchforge

./: .dockerignore  .env.example  .gitignore  .last_run  AB_LATENCY_FINAL_DELIVERY.txt  ARCHIVE_MANIFEST.md  AUDIT.md  CAG_IMPLEMENTATION_SUMMARY.md  CANARY_10PCT_TEST_README.md  CANARY_DEPLOYMENT_SYSTEM.md  CHANGES_AND_OUTPUTS.md  DELIVERY_REPORT.md  DEMO_PACK_README.md  DOCKER_AUDIT.md  Dockerfile  EDITORIAL_DELIVERABLES.md  ENHANCED_API_TEST_GUIDE.md  ENHANCED_API_V2_SUMMARY.md  ENHANCEMENT_DELIVERY.md  EXPERIMENT_SUMMARY.md  FINAL_AUDIT.md  FINAL_CHECKLIST.md  FINAL_DELIVERY_SUMMARY.md  FINAL_OVERVIEW.md  FRONTEND_AUDIT.md  GATEKEEPER_CHANGES.md  GATEKEEPER_SUMMARY.txt  LATENCY_OPTIMIZATION_SUITE.md  LATENCY_SUITE_SUMMARY.txt  LAUNCH_SYSTEM_SUMMARY.md  LINKEDIN_POST.md  LIVE_TEST_RESULTS_FINAL.md  Makefile  PAGEINDEX_CANARY_SUMMARY.md  PAGEINDEX_FINAL_REPORT.md  PAGEINDEX_FULL_VALIDATION.md  PAGEINDEX_OR_GATE_SUMMARY.md  PAGE_INDEX_SUMMARY.md  PAGE_INDEX_V2_SUMMARY.md  POLICY_QUICKSTART.md  (+53 more)
.github/: pull_request_template.md
.runs/: 214fce1ca380.json  21de8a5e7c7f.json  29a2bbeb9f45.json  331240eca161.json  41ef9253fc37.json  4dc8d59d3082.json  8cdb0bea1bae.json  94ad5ca2e201.json  a06e065f85c0.json  a_verify.json  api_healthz.txt  b20a691cfeec.json  b_verify.json  c_verify.json  f60b661fefca.json  finalize.json  finalize_keys.txt  graph_full.json  graph_resume.json  graph_smoke.json  job_submit.json  obs_url.json  ping.json  proxy_deg.json  proxy_deg_keys.txt  proxy_ok.json  proxy_ok_keys.txt  proxy_readyz.json  qdrant_check.json  qdrant_seed.json  query_fallback.json  rollback_proxy.sh
agents/: __init__.py
app/: Dockerfile  main.py  orchestrate_router.py
backend_core/: flow_control.py  routing_policy.py
backups/: manifest-20251108-221444.txt  repo-20251108-221444.tar.gz.sha256
baselines/: demo-1762849547.json  demo-1762852441.json  demo-1762884368.json
clients/: retrieval_proxy_client.py
configs/: SLA_POLICY.yaml  autotuner_fiqa_experiment.yaml  autotuner_policy.yaml  canary_state.json  control.yaml  demo_beir_fiqa_hybrid.yaml  demo_beir_fiqa_vector.yaml  demo_beir_scifact_hybrid.yaml  demo_beir_scifact_ta_golden.yaml  demo_beir_scifact_ta_hybrid.yaml  demo_beir_scifact_ta_vector.yaml  demo_beir_scifact_vector.yaml  demo_fiqa_golden.yaml  demo_hybrid.yaml  demo_hybrid_5k.yaml  demo_hybrid_5k_alpha03.yaml  demo_hybrid_fiqa.yaml  demo_pack_scenarios.yaml  demo_rerank.yaml  demo_rerank_5k.yaml  demo_rerank_fake.yaml  demo_rerank_off.yaml  demo_scifact_ta_golden.yaml  demo_vector_5k.yaml  demo_vector_fiqa.yaml  dev_defaults.yaml  fiqa_suite.yaml  observed_experiment.yaml  policies.json  presets_v10.json
dashboards/: cost_failure.json  recall_p95_cache.json
data/: fiqa_queries.txt  goldset.jsonl  populate_qdrant.py  scifact_queries.txt
docker/: Dockerfile.gpu-worker
docs/: AUTOTUNER_ALG_DELIVERY.md  AUTOTUNER_DELIVERY_SUMMARY.md  AutoTuner_ALG_INDEX.md  AutoTuner_ALG_NOTES.md  AutoTuner_ALG_QUICK_START.md  AutoTuner_README.md  DEV_MODE_CONFIG.md  INDEX.md  ONEPAGER_REPORT_README.md  PRODUCTION_LAUNCH_REPORT.md  QUICKSTART.md  RESULTS_SUMMARY.md  SLA_CALLBACK_GUIDE.md  TEST_COVERAGE_SUMMARY.md  approval_score_ml.md  auto_rewrite_pitch_2min.md  collected_metrics.json  crowdstrike_role_mapping.md  deploy_frontend_vercel.md  mortgage_ai_demo.md  offline_agent_eval_report.md  openapi_snapshot.json  search_console_frontend_survey.md  single_home_agent_end2end.md
engines/: __init__.py  factory.py  milvus_engine.py  networkx_engine.py
eval/: run_ab_30m_evaluation.py  run_abc_4m_evaluation.py
evals/: metrics.py  scenarios.py
examples/: cache_demo.py
experiments/: CHUNK_COMPARISON_QUICKSTART.md  __init__.py  airbnb_lab_smoke.py  airbnb_llm_enabled_smoke.py  airbnb_profiles_smoke.py  airbnb_prompt_smoke.py  analyze_chunk_results.py  approval_ml_schema.py  approval_score_ml_smoke.py  approval_score_smoke.py  audit_50k.py  auto_tuner_on_off.py  build_chunk_collections.py  chunking_strategies.py  compare_runs.py  e2e_nl_single_home_agent_demo.py  eval_approval_score_ml.py  fiqa_lib.py  fiqa_suite_runner.py  fiqa_tuner.py  gen_approval_distillation_data.py  go_proxy_on_off.py  guardrails_cases.yaml  guardrails_lab.py  (+45 more)
(+1151 files in other folders)
