[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.run]
source = ["modules/autotuner/brain"]
omit = [
    "*/tests/*",
    "*/__pycache__/*"
]

[project]
name = "searchforge"
version = "0.1.0"
description = ""
authors = [
    {name = "Andy",email = "linanxin@me.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.121.1,<0.122.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "portalocker (>=3.2.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "openai (>=2.7.2,<3.0.0)",
    "networkx (>=3.5,<4.0)",
    "uvicorn[standard] (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {version = "^0.30.0", extras = ["standard"]}

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
